--- a/Definitions1.html
+++ b/Definitions1.html
@@ -36,9 +36,8 @@
     with multiplication distributing over addition.
     </li>
     <li class='itemize'><span class='rm-lmbx-10x-x-109'>Galois Field (</span><!-- l. 11 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle mathvariant='normal'><mi>GF</mi></mstyle><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math><span class='rm-lmbx-10x-x-109'>):</span>
-   A       field       with       a       finite       number       of       elements,       necessarily
-    <!-- l. 11 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup></math>
-    for some prime <!-- l. 11 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>
+   A field with <!-- l. 11 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup></math>
+    elements for some prime <!-- l. 11 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>
    and positive integer <!-- l. 11 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>.
     </li>
     <li class='itemize'><!-- l. 12 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></math>
