--- a/GLWECryptosystem.html
+++ b/GLWECryptosystem.html
@@ -21,8 +21,8 @@ are a list of <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/
 <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree polynomials,
 each. The message <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math>
 and the noise <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi></math>
-are an <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree
-polynomial, each. Like in LWE and GLWE, a new public key
+are <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree
+polynomials, each. Like in LWE and RLWE, a random public mask
 <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>A</mi></math> is created for each ciphertext,
 whereas the same secret key <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math>
 is used for all ciphertexts. In this section, we denote each ciphertext instance as
