--- a/GLev.html
+++ b/GLev.html
@@ -23,12 +23,12 @@ GLWE ciphertext of a GLev ciphertext uses a different plaintext scaling factor, 
 structure of GLev ciphertext is visually depicted in <a href='Encryption3.html#an-illustration-of-a-glev-ciphertext-'>Figure 9<!-- tex4ht:ref: subsec:glwe-enc  --></a>.
 </p><!-- l. 4 --><p class='indent'>   Note that <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math> should
 be some value between <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>
-and <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>. Especially,
+and <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>. Specifically,
 <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> should be smaller
-than <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math> because if
-<!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> is greater than
-<!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>, then the higher
-bits of <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> will
+than or equal to <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>
+because if <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> is greater
+than <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>, then the
+higher bits of <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> will
 overflow beyond <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
 when computing <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi></mrow></math>.
