--- a/GSWandRGSW.html
+++ b/GSWandRGSW.html
@@ -10,8 +10,8 @@
 </head><body>
    <!-- l. 25 --><div class='crosslinks'><p class='noindent'>[<a href='Decryption4.html'>prev</a>][<a href='GGSW.html#GSWandRGSW.html'>parent</a>]</p></div>
    <h4 class='subsectionHead' id='gsw-and-rgsw'><span class='titlemark'>B-6.3   </span> <a id='x89-102000B-6.3'></a>GSW and RGSW</h4>
-<!-- l. 27 --><p class='noindent'>GSW is GLev with <!-- l. 27 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>n</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn></mrow></math>.
-RGSW is GLev with <!-- l. 27 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>k</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn></mrow></math>.
+<!-- l. 27 --><p class='noindent'>GSW is GGSW with <!-- l. 27 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>n</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn></mrow></math>.
+RGSW is GGSW with <!-- l. 27 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>k</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn></mrow></math>.
                                                                                          
                                                                                          
 </p>
