--- a/Setup2.html
+++ b/Setup2.html
@@ -10,7 +10,7 @@
 </head><body>
    <!-- l. 6 --><div class='crosslinks'><p class='noindent'>[<a href='GLWECryptosystem.html#Setup2.html'>parent</a>][<a href='Encryption2.html'>next</a>]</p></div>
    <h4 class='subsectionHead' id='setup2'><span class='titlemark'>B-4.1   </span> <a id='x77-89000B-4.1'></a>Setup</h4>
-<!-- l. 7 --><p class='noindent'>Let <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> the size of
+<!-- l. 7 --><p class='noindent'>Let <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> be the size of
 plaintext, and <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> the size
                                                                                          
                                                                                          
@@ -22,11 +22,11 @@ and <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathM
 <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>). Randomly
 pick a list of <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>k</mi></math>
 <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree
-polynomials as a secret key, where each polynomial coefficient is a randomly picked binary number in
-<!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math> (i.e.,
-<!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msubsup><mrow><mo class='MathClass-open' stretchy='false'>{</mo><msub><mrow><mi>S</mi></mrow><mrow><mi>i</mi></mrow></msub><mo class='MathClass-close' stretchy='false'>}</mo></mrow><mrow><mi>i</mi><mo class='MathClass-rel' stretchy='false'>=</mo><mn>0</mn></mrow><mrow><mi>k</mi><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup><munderover> <mo class='MathClass-rel' stretchy='false'>←</mo><mrow></mrow><mrow><mi>$</mi></mrow></munderover><msubsup><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mn>2</mn><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow><mrow><mi>k</mi></mrow></msubsup></mrow></math>). Let
+polynomials as a secret key, where each polynomial coefficient is a randomly picked ternary number in
+<!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math> (i.e.,
+<!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msubsup><mrow><mo class='MathClass-open' stretchy='false'>{</mo><msub><mrow><mi>S</mi></mrow><mrow><mi>i</mi></mrow></msub><mo class='MathClass-close' stretchy='false'>}</mo></mrow><mrow><mi>i</mi><mo class='MathClass-rel' stretchy='false'>=</mo><mn>0</mn></mrow><mrow><mi>k</mi><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup><munderover> <mo class='MathClass-rel' stretchy='false'>←</mo><mrow></mrow><mrow><mi>$</mi></mrow></munderover><msubsup><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle class='text'><mtext class='textit' mathvariant='italic'>𝑡𝑒𝑟𝑛</mtext></mstyle><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow><mrow><mi>k</mi></mrow></msubsup></mrow></math>). Let
 <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mrow><mo fence='true' form='prefix'>⌊</mo><mrow><mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
-</mrow><mrow><mi>t</mi></mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow></mrow></math> the
+</mrow><mrow><mi>t</mi></mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow></mrow></math> be the
 scaling factor of plaintext.
 </p><!-- l. 9 --><p class='indent'>   Notice that GLWE’s setup parameters are similar to that of RLWE. One difference is that
 <!-- l. 9 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math> is not an
