--- a/CKKSScheme.html
+++ b/CKKSScheme.html
@@ -9,21 +9,21 @@
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
    <!-- l. 623 --><div class='crosslinks'><p class='noindent'>[<a href='BFVScheme.html'>prev</a>][<a href='FullyHomomorphicEncryptionSchemes.html#CKKSScheme.html'>parent</a>][<a href='BGVScheme.html'>next</a>]</p></div>
-   <h3 class='sectionHead' id='ckks-scheme'><span class='titlemark'>D-3   </span> <a id='x127-175000D-3'></a>CKKS Scheme</h3>
-<!-- l. 1 --><p class='noindent'>The CKKS scheme is designed for homomorphic addition and multiplication of complex numbers
-that contain imaginary numbers. Therefore, unlike BFV, BGV, or TFHE, which can only
-compute over integers, CKKS can compute real-world floating point arithmetic, such as machine
+   <h3 class='sectionHead' id='ckks-scheme'><span class='titlemark'>D-3   </span> <a id='x126-175000D-3'></a>CKKS Scheme</h3>
+<!-- l. 1 --><p class='noindent'>The CKKS scheme is designed for homomorphic addition and multiplication of complex numbers that
+contain imaginary components. Therefore, unlike BFV, BGV, or TFHE, which can only compute
+over integers, CKKS can compute real-world floating point arithmetic, such as in machine
 learning.
 </p><!-- l. 4 --><p class='indent'>   The CKKS scheme’s goal is to homomorphically compute addition and multiplication of complex
 numbers. However, while our targeted inputs are complex numbers, CKKS’s plaintext space is defined as a
 <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree
-polynomial ring with real-number coefficients having a limited precision, that is,
+polynomial ring with real-number coefficients having limited precision; that is,
 <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>x</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
 Therefore, CKKS designs its unique encoding scheme which converts the input
 complex numbers into integers which can be used as coefficients of a polynomial in
 <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msub></math>.
 </p><!-- l. 7 --><p class='indent'>   <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
-</p><!-- l. 9 --><p class='noindent'>In overall, CKKS’s encryption procedure is as follows:
+</p><!-- l. 9 --><p class='noindent'>Overall, CKKS’s encryption procedure is as follows:
 </p><!-- l. 12 --><p class='indent'>
    </p><dl class='enumerate-enumitem'><dt class='enumerate-enumitem'>
 1. </dt><dd class='enumerate-enumitem'><span class='underline'><span class='rm-lmss-10x-x-109'>Encoding</span><sub><span class='rm-lmss-10x-x-109'>1</span></sub>:</span> Encode the targeted input complex number into a real number
