--- a/EncryptionandDecryption.html
+++ b/EncryptionandDecryption.html
@@ -9,9 +9,12 @@
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
    <!-- l. 41 --><div class='crosslinks'><p class='noindent'>[<a href='TFHEScheme.html#EncryptionandDecryption.html'>parent</a>][<a href='HomomorphicCiphertexttoCiphertextAddition.html'>next</a>]</p></div>
-   <h4 class='subsectionHead' id='encryption-and-decryption'><span class='titlemark'>D-1.1   </span> <a id='x106-119000D-1.1'></a>Encryption and Decryption</h4>
+   <h4 class='subsectionHead' id='encryption-and-decryption'><span class='titlemark'>D-1.1   </span> <a id='x105-118000D-1.1'></a>Encryption and Decryption</h4>
 <!-- l. 44 --><p class='noindent'>TFHE encrypts and decrypts ciphertexts based on the LWE cryptosystem (<a href='LWECryptosystem1.html#lwe-cryptosystem1'><span class='ts1-lmr10-x-x-109'>§</span>B-2<!-- tex4ht:ref: sec:glwe-key-switching  --></a>), which is equivalent to the GLWE
 cryptosystem (<a href='GLWECryptosystem.html#glwe-cryptosystem'><span class='ts1-lmr10-x-x-109'>§</span>B-4<!-- tex4ht:ref: sec:glwe-key-switching  --></a>) with <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>n</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn></mrow></math>.
+However, one distinction from the LWE cryptosystem is that TFHE samples the secret key elements from the binary
+set <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>, not from
+the ternary set <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>.
 </p>
    <div class='tcolorbox tcolorbox' id='tcolobox-71'>     
 <div class='tcolorbox-title'>
