--- a/RLWECryptosystem1.html
+++ b/RLWECryptosystem1.html
@@ -11,14 +11,14 @@
    <!-- l. 519 --><div class='crosslinks'><p class='noindent'>[<a href='LWECryptosystem1.html'>prev</a>][<a href='PostquantumCryptography.html#RLWECryptosystem1.html'>parent</a>][<a href='GLWECryptosystem.html'>next</a>]</p></div>
    <h3 class='sectionHead' id='rlwe-cryptosystem1'><span class='titlemark'>B-3   </span> <a id='x72-84000B-3'></a>RLWE Cryptosystem</h3>
 <!-- l. 1 --><p class='noindent'>The RLWE cryptosystem’s ciphertext is a tuple <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>A</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>B</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>,
-where <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>B</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>S</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>A</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi mathvariant='normal'>Δ</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>M</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>E</mi></mrow></math>. The public
-key <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>A</mi></math> and the
-secret key <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math> are
+where <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>B</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>S</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>A</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi mathvariant='normal'>Δ</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>M</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>E</mi></mrow></math>. The random
+public mask <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>A</mi></math> and
+the secret key <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math> are
 <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree polynomials.
 The message <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> and
-the noise <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi></math> are an
-<!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree polynomial, each. Like
-in LWE, a new public key <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>A</mi></math>
+the noise <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi></math> are
+<!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree polynomials. Like in
+LWE, a new random public mask <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>A</mi></math>
 is created for each ciphertext, whereas the same secret key
 <!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math>
 is used for all ciphertexts. In this section, we denote each ciphertext instance as
