--- a/RNSvariantFHESchemes.html
+++ b/RNSvariantFHESchemes.html
@@ -9,36 +9,37 @@
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
    <!-- l. 637 --><div class='crosslinks'><p class='noindent'>[<a href='BGVScheme.html'>prev</a>][<a href='FullyHomomorphicEncryptionSchemes.html#RNSvariantFHESchemes.html'>parent</a>][<a href='FHESchemeComparisonandSummary.html'>next</a>]</p></div>
-   <h3 class='sectionHead' id='rnsvariant-fhe-schemes'><span class='titlemark'>D-5   </span> <a id='x153-224000D-5'></a>RNS-variant FHE Schemes</h3>
-<!-- l. 1 --><p class='noindent'>FHE parameters of BFV, BGV, or CKKS schemes which are secure enough sometimes require
-the ring size of polynomial coefficients to be 1000 bits or more, which consumes much
-computational resources for 64-bit CPU architectures. To make the computation efficient, we
-can alternatively represent the coefficients of ciphertext polynomials by the number residue
-system (RNS) <a href='ApplicationResidueNumberSystemRNS.html#application-residue-number-system-rns'><span class='ts1-lmr10-x-x-109'>§</span>A-13.1<!-- tex4ht:ref: subsubsec:bfv-bootstrapping-summary  --></a>, which allows modulo addition and multiplication of elements from a
-large ring (e.g., 1000 bits) by the combination of values computed in small rings (e.g.,
+   <h3 class='sectionHead' id='rnsvariant-fhe-schemes'><span class='titlemark'>D-5   </span> <a id='x152-224000D-5'></a>RNS-variant FHE Schemes</h3>
+<!-- l. 1 --><p class='noindent'>The FHE parameters of BFV, BGV, or CKKS schemes, which are secure enough, sometimes
+require the ring size of polynomial coefficients to be 1000 bits or more, consuming significant
+computational resources for 64-bit CPU architectures. To make the computation efficient,
+we can alternatively represent the coefficients of ciphertext polynomials using the number
+residue system (RNS) <a href='ApplicationResidueNumberSystemRNS.html#application-residue-number-system-rns'><span class='ts1-lmr10-x-x-109'>§</span>A-13.1<!-- tex4ht:ref: subsubsec:bfv-bootstrapping-summary  --></a>, which allows for modulo addition and multiplication of elements
+from a large ring (e.g., 1000 bits) by combining values computed in small rings (e.g.,
 32<!-- l. 1 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>∼</mo></mrow></math>64
-bits), each of which compactly fits in 64-bit CPU registers. Modern BFV, BGV, and CKKS schemes adopt
-this RNS approach by default for efficient computation of large values. These are called RNS-variant FHE
-schemes.
-</p><!-- l. 3 --><p class='indent'>   While RNS can directly compute modulo addition and multiplication, it does not directly support other
-operations such as <span class='rm-lmss-10x-x-109'>ModRaise </span>or modulus switch, which are essential operations for all FHE schemes. This
+bits), each of which compactly fits in 64 bit CPU registers. Modern BFV, BGV, and CKKS schemes adopt
+this RNS approach by default for the efficient computation of large values. These are called RNS-variant
+FHE schemes.
+</p><!-- l. 3 --><p class='indent'>   While RNS can directly compute modulo addition and multiplication, it does not directly support
+other operations such as <span class='rm-lmss-10x-x-109'>ModRaise </span>or modulus switching, which are essential for all FHE schemes. This
 section explains how we can design such corner-case operations based on RNS to accomplish a complete
 design of RNS-based FHE schemes. Besides BFV, BGV, and CKKS, TFHE can also theoretically use
 RNS for representing its ciphertext coefficients. However, TFHE’s practically used coefficient size is less
 than <!-- l. 3 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mn>2</mn></mrow><mrow><mn>32</mn></mrow></msup></math>
 (or <!-- l. 3 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mn>2</mn></mrow><mrow><mn>64</mn></mrow></msup></math>),
-which compactly fits in 32-bit (or 64-bit) modern CPU registers. Therefore, TFHE does not need RNS.
-Thus, this section will focus on RNS-based operations for BFV, BGV, and CKKS.
-</p><!-- l. 5 --><p class='indent'>   Particularly in this section, we assume the modulo reduction
+which compactly fits within 32-bit (or 64-bit) modern CPU registers. Therefore, TFHE does
+not need RNS. Thus, this section will focus on RNS-based operations for BFV, BGV, and
+CKKS.
+</p><!-- l. 5 --><p class='indent'>   Particularly in this section, we assume that the modulo reduction
 <!-- l. 5 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mi>q</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-rel' stretchy='false'>|</mo><mi>a</mi><msub><mrow><mo class='MathClass-rel' stretchy='false'>|</mo></mrow><mrow><mi>q</mi></mrow></msub></mrow></math> implicitly
-uses a centered (i.e., signed) residue representation (<a href='CenteredResidueRepresentation.html#centered-residue-representation'><span class='ts1-lmr10-x-x-109'>§</span>A-1.5<!-- tex4ht:ref: subsubsec:bfv-bootstrapping-summary  --></a>) whose modulo overflow &amp; underflow boundaries
+uses a centered (i.e., signed) residue representation (<a href='CenteredResidueRepresentation.html#centered-residue-representation'><span class='ts1-lmr10-x-x-109'>§</span>A-1.5<!-- tex4ht:ref: subsubsec:bfv-bootstrapping-summary  --></a>), whose modulo overflow &amp; underflow boundaries
 are <!-- l. 5 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
 </mrow><mrow><mn>2</mn></mrow></mfrac></mstyle> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></math> and
 <!-- l. 5 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-bin' stretchy='false'>−</mo><mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
 </mrow><mrow><mn>2</mn></mrow></mfrac></mstyle></mrow></math>,
 respectively. This assumption is necessary to eliminate a certain modulo reduction operation when
-designing <span class='rm-lmss-10x-x-109'>FastBconvEx </span>(<a href='ExactFastBaseConversiontextsfFastBConvEx.html#exact-fast-base-conversion-fastbconvex'><span class='ts1-lmr10-x-x-109'>§</span>D-5.8<!-- tex4ht:ref: subsubsec:bfv-bootstrapping-summary  --></a>)– by using the assumption of limiting the possible range of certain residue
-arithmetic as discussed in <a href='CenteredResidueRepresentation.html#centered-residue-representation'><span class='ts1-lmr10-x-x-109'>§</span>A-1.5<!-- tex4ht:ref: subsubsec:bfv-bootstrapping-summary  --></a>.
+designing <span class='rm-lmss-10x-x-109'>FastBconvEx </span>(<a href='ExactFastBaseConversiontextsfFastBConvEx.html#exact-fast-base-conversion-fastbconvex'><span class='ts1-lmr10-x-x-109'>§</span>D-5.8<!-- tex4ht:ref: subsubsec:bfv-bootstrapping-summary  --></a>) by using the assumption of limiting the possible range of certain residue
+arithmetic, as discussed in <a href='CenteredResidueRepresentation.html#centered-residue-representation'><span class='ts1-lmr10-x-x-109'>§</span>A-1.5<!-- tex4ht:ref: subsubsec:bfv-bootstrapping-summary  --></a>.
 </p>
    <div class='tcolorbox tcolorbox' id='tcolobox-116'>     
 <div class='tcolorbox-title'>
@@ -112,7 +113,7 @@ arithmetic as discussed in <a href='CenteredResidueRepresentation.html#centered-
 <br />   <span class='subsectionToc'>D-5.9 <a href='DecomposingMultiplicationtextsfDecompMulttextsubscriptRNS.html#decomposing-multiplication-decompmult-rns'>Decomposing Multiplication: <span class='rm-lmss-10x-x-109'>DecompMult</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub></a></span>
 <br />   <span class='subsectionToc'>D-5.10 <a href='ApplyingRNSTechniquestoFHEOperations.html#applying-rns-techniques-to-fhe-operations'>Applying RNS Techniques to FHE Operations</a></span>
 <br />   <span class='subsubsectionToc'>D-5.10.1 <a href='ApplyingRNSTechniquestoFHEOperations.html#addition-and-multiplication-of-polynomials'>Addition and Multiplication of Polynomials</a></span>
-<br />   <span class='subsubsectionToc'>D-5.10.2 <a href='ApplyingRNSTechniquestoFHEOperations.html#key-switching'>Key Switching</a></span>
+<br />   <span class='subsubsectionToc'>D-5.10.2 <a href='ApplyingRNSTechniquestoFHEOperations.html#key-switching1'>Key Switching</a></span>
 <br />   <span class='subsubsectionToc'>D-5.10.3 <a href='ApplyingRNSTechniquestoFHEOperations.html#input-slot-rotation'>Input Slot Rotation</a></span>
 <br />   <span class='subsubsectionToc'>D-5.10.4 <a href='ApplyingRNSTechniquestoFHEOperations.html#bfvs-ciphertexttociphertext-multiplication'>BFV’s Ciphertext-to-Ciphertext Multiplication</a></span>
 <br />   <span class='subsubsectionToc'>D-5.10.5 <a href='ApplyingRNSTechniquestoFHEOperations.html#ckkss-ciphertexttociphertext-multiplication'>CKKS’s Ciphertext-to-Ciphertext Multiplication</a></span>
