--- a/CKKSScheme.html
+++ b/CKKSScheme.html
@@ -14,23 +14,23 @@
 contain imaginary components. Therefore, unlike BFV, BGV, or TFHE, which can only compute
 over integers, CKKS can compute real-world floating point arithmetic, such as in machine
 learning.
-</p><!-- l. 4 --><p class='indent'>   The CKKS scheme’s goal is to homomorphically compute addition and multiplication of complex
+</p><!-- l. 4 --><p class='indent'>   The CKKS scheme’s goal is to homomorphically compute the addition and multiplication of complex
 numbers. However, while our targeted inputs are complex numbers, CKKS’s plaintext space is defined as a
 <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>n</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree
 polynomial ring with real-number coefficients having limited precision; that is,
 <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>x</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
-Therefore, CKKS designs its unique encoding scheme which converts the input
-complex numbers into integers which can be used as coefficients of a polynomial in
+Therefore, CKKS designs its unique encoding scheme, which converts the input
+complex numbers into integers that can be used as coefficients of a polynomial in
 <!-- l. 4 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msub></math>.
 </p><!-- l. 7 --><p class='indent'>   <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 9 --><p class='noindent'>Overall, CKKS’s encryption procedure is as follows:
 </p><!-- l. 12 --><p class='indent'>
    </p><dl class='enumerate-enumitem'><dt class='enumerate-enumitem'>
-1. </dt><dd class='enumerate-enumitem'><span class='underline'><span class='rm-lmss-10x-x-109'>Encoding</span><sub><span class='rm-lmss-10x-x-109'>1</span></sub>:</span> Encode the targeted input complex number into a real number
+1. </dt><dd class='enumerate-enumitem'><span class='underline'><span class='rm-lmss-10x-x-109'>Encoding</span><sub><span class='rm-lmss-10x-x-109'>1</span></sub>:</span> Encode the targeted input complex number as a real number
    </dd><dt class='enumerate-enumitem'>
-2. </dt><dd class='enumerate-enumitem'><span class='underline'><span class='rm-lmss-10x-x-109'>Encoding</span><sub><span class='rm-lmss-10x-x-109'>2</span></sub>:</span> Encode the real number into an integer
+2. </dt><dd class='enumerate-enumitem'><span class='underline'><span class='rm-lmss-10x-x-109'>Encoding</span><sub><span class='rm-lmss-10x-x-109'>2</span></sub>:</span> Encode the real number as an integer
    </dd><dt class='enumerate-enumitem'>
-3. </dt><dd class='enumerate-enumitem'><span class='underline'><span class='rm-lmss-10x-x-109'>Encryption</span>:</span> Encrypt the integer by RLWE</dd></dl>
+3. </dt><dd class='enumerate-enumitem'><span class='underline'><span class='rm-lmss-10x-x-109'>Encryption</span>:</span> Encrypt the integer using RLWE</dd></dl>
 <!-- l. 16 --><p class='noindent'>The encrypted RLWE ciphertext supports homomorphic addition and multiplication.
 </p><!-- l. 18 --><p class='indent'>   <!-- l. 18 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 20 --><p class='noindent'>At the end of all homomorphic operations, CKKS’s decryption procedure is as follows:
