--- a/BGVScheme.html
+++ b/BGVScheme.html
@@ -104,13 +104,9 @@ BFV’s.
 <br />   <span class='subsectionToc'>D-4.9 <a href='HomomorphicKeySwitching3.html#homomorphic-key-switching3'>Homomorphic Key Switching</a></span>
 <br />   <span class='subsectionToc'>D-4.10 <a href='HomomorphicRotationofInputVectorSlots2.html#homomorphic-rotation-of-input-vector-slots2'>Homomorphic Rotation of Input Vector Slots</a></span>
 <br />   <span class='subsectionToc'>D-4.11 <a href='ModulusBootstrapping1.html#modulus-bootstrapping1'>Modulus Bootstrapping</a></span>
-<br />   <span class='subsubsectionToc'>D-4.11.1     <a href='ModulusBootstrapping1.html#the-reason-for-modulus-switch-from-ql-q'>The     Reason     for     Modulus     Switch     from
-<!-- l. 244 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>q</mi></mrow><mrow><mi>l</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>→</mo><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true' stretchy='false'>^</mo></mover></mrow></math></a></span>
-<br />   <span class='subsubsectionToc'>D-4.11.2 <a href='ModulusBootstrapping1.html#modraise-instead-of-homomorphic-decryption'><span class='rm-lmss-10x-x-109'>ModRaise </span>instead of Homomorphic Decryption</a></span>
-<br />   <span class='subsubsectionToc'>D-4.11.3                   <a href='ModulusBootstrapping1.html#the-choice-of-'>The                   Choice                   of
-<!-- l. 246 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>𝜀</mi></math></a></span>
-<br />   <span class='subsubsectionToc'>D-4.11.4                          <a href='ModulusBootstrapping1.html#generalization-to-delta-pr'>Generalization                          to
-<!-- l. 247 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <msup><mrow><mi>p</mi></mrow><mrow><mi>r</mi></mrow></msup></mrow></math></a></span>
+<br />   <span class='subsubsectionToc'>D-4.11.1 <a href='ModulusBootstrapping1.html#discussion6'>Discussion</a></span>
+<br />   <span class='subsubsectionToc'>D-4.11.2 <a href='ModulusBootstrapping1.html#noise-growth-reduction-by-early-inverse-multiplication'>Noise Growth Reduction by Early Inverse Multiplication</a></span>
+<br />   <span class='subsubsectionToc'>D-4.11.3 <a href='ModulusBootstrapping1.html#comparing-the-bootstrapping-in-bfv-bgv-and-ckks'>Comparing the Bootstrapping in BFV, BGV, and CKKS</a></span>
    </div>
 <!-- l. 47 --><p class='indent'>   
 
