deploy: bee6c9e932fc478b22d74d6ae4e2050751fa2cc8

--- a/EncryptionandDecryption1.html
+++ b/EncryptionandDecryption1.html
@@ -56,8 +56,9 @@ gets eliminated by the rounding process)
 </mrow><mrow><mn>2</mn></mrow></mfrac></mstyle></mrow></math>, where
 <!-- l. 334 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>k</mi></mrow><mrow><mi>i</mi></mrow></msub></math> is each coefficient of
 the polynomial <!-- l. 334 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>K</mi></math> that
-accounts for the <!-- l. 334 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>-overflows
-of the coefficients of the plaintext polynomial updated across homomorphic operations.
+accounts for the <!-- l. 334 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>-multiple
+overflows of the coefficients of the plaintext polynomial updated across homomorphic
+operations.
 </p>
  
 </div> 
