--- a/HomomorphicRotationofInputVectorSlots.html
+++ b/HomomorphicRotationofInputVectorSlots.html
@@ -102,7 +102,7 @@ The integer polynomial that isomorphically encodes the input vector
 <!-- l. 1008 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math></span>
 </p><!-- l. 1011 --><p class='indent'>   <!-- l. 1011 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 1013 --><p class='indent'>   We learned from <a href='IsomorphismbetweenPolynomialsandVectorsoverIntegers.html#isomorphism-between-polynomials-and-vectors-over-integers'><span class='ts1-lmr10-x-x-109'>§</span>A-10.6<!-- tex4ht:ref: subsec:bfv-key-switching  --></a> that decoding the polynomial
-<!-- l. 1013 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>M</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> back to
+<!-- l. 1013 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>M</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
 <!-- l. 1013 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math> is equivalent to
 evaluating <!-- l. 1013 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>M</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> at the
 following <!-- l. 1013 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math> distinct
