--- a/Definitions1.html
+++ b/Definitions1.html
@@ -24,10 +24,10 @@
     both sides: <!-- l. 9 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-open' stretchy='false'>(</mo><mi>b</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>c</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>b</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>c</mi></mrow></math>
    and <!-- l. 9 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>c</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>c</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>b</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>c</mi></mrow></math>
    for all <!-- l. 9 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>c</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo><mi>R</mi></mrow></math>.
-    <span class='rm-lmri-10x-x-109'>(Multiplication        is        not        necessarily        commutative        (e.g.,        a
-    matrix         multiplication),         and         an         identity         element         for</span>
+    (Multiplication           is           not           necessarily           commutative,           e.g.,
+    a        matrix        multiplication,        and        an        identity        element        for
     <!-- l. 9 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow></math>
-    <span class='rm-lmri-10x-x-109'>is optional unless stated “ring with unity”.)</span>
+    is optional unless stated “ring with unity”.)
     </li>
     <li class='itemize'><span class='rm-lmbx-10x-x-109'>Field: </span>A set <!-- l. 10 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>F</mi></math>
    that is an abelian group under <!-- l. 10 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow></math>,
