deploy: f273ead8744452082bd88430ca0019f6960fa5b6

--- a/FullyHomomorphicEncryptionSchemes.html
+++ b/FullyHomomorphicEncryptionSchemes.html
@@ -82,7 +82,7 @@ their RNS-variant versions.
 <br />   <span class='subsectionToc'>D-5.9 <a href='DecomposingMultiplicationtextsfDecompMulttextsubscriptRNS.html#decomposing-multiplication-decompmult-rns'>Decomposing Multiplication: <span class='rm-lmss-10x-x-109'>DecompMult</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub></a></span>
 <br />   <span class='subsectionToc'>D-5.10 <a href='ApplyingRNSTechniquestoFHEOperations.html#applying-rns-techniques-to-fhe-operations'>Applying RNS Techniques to FHE Operations</a></span>
 <br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary'>FHE Scheme Comparison and Summary</a></span>
-<br />   <span class='sectionToc'>D-7 <a href='PythonbasedDemoFHELibrary.html#pythonbased-demo-fhe-library'>Python-based Demo FHE Library</a></span>
+<br />   <span class='sectionToc'>D-7 <a href='PythonDemoFHELibrary.html#python-demo-fhe-library'>Python Demo FHE Library</a></span>
 <br />   <span class='likesectionToc'><a href='refname.html#references'>References</a></span>
    </div>
 <!-- l. 611 --><p class='indent'>   
