--- a/contentsname.html
+++ b/contentsname.html
@@ -279,7 +279,7 @@ Polynomials</a></span>
 <br />   <span class='subsubsectionToc'>D-5.10.10 <a href='ApplyingRNSTechniquestoFHEOperations.html#noise-impact-of-rns-operations' id='QQ2-162-267'>Noise Impact of RNS Operations</a></span>
 <br />   <span class='subsubsectionToc'>D-5.10.11 <a href='ApplyingRNSTechniquestoFHEOperations.html#python-source-code-of-rns-primitives' id='QQ2-162-268'>Python Source Code of RNS Primitives</a></span>
 <br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary'>FHE Scheme Comparison and Summary</a></span>
-<br />   <span class='sectionToc'>D-7 <a href='PythonbasedDemoFHELibrary.html#pythonbased-demo-fhe-library'>Python-based Demo FHE Library</a></span>
+<br />   <span class='sectionToc'>D-7 <a href='PythonDemoFHELibrary.html#python-demo-fhe-library'>Python Demo FHE Library</a></span>
    </div>
                                                                                          
                                                                                          
