--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Rings (<!-- l. 69 --><math display='inline' xmlns='http://www.w3.org/1998/Math/M
 <br />   <span class='subsectionToc'>D-5.9 <a href='DecomposingMultiplicationtextsfDecompMulttextsubscriptRNS.html#decomposing-multiplication-decompmult-rns' id='QQ2-161-256'>Decomposing Multiplication: <span class='rm-lmss-10x-x-109'>DecompMult</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub></a></span>
 <br />   <span class='subsectionToc'>D-5.10 <a href='ApplyingRNSTechniquestoFHEOperations.html#applying-rns-techniques-to-fhe-operations' id='QQ2-162-257'>Applying RNS Techniques to FHE Operations</a></span>
 <br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary' id='QQ2-163-269'>FHE Scheme Comparison and Summary</a></span>
-<br />   <span class='sectionToc'>D-7 <a href='PythonbasedDemoFHELibrary.html#pythonbased-demo-fhe-library' id='QQ2-164-294'>Python-based Demo FHE Library</a></span>
+<br />   <span class='sectionToc'>D-7 <a href='PythonDemoFHELibrary.html#python-demo-fhe-library' id='QQ2-164-294'>Python Demo FHE Library</a></span>
 <br />   <span class='likesectionToc'><a href='refname.html#references' id='QQ2-165-295'>References</a></span>
    </div>
 
