--- a/refname.html
+++ b/refname.html
@@ -8,7 +8,7 @@
 <meta content='index.tex' name='src' /> 
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
-   <!-- l. 1 --><div class='crosslinks'><p class='noindent'>[<a href='PythonbasedDemoFHELibrary.html'>prev</a>][<a href='FullyHomomorphicEncryptionSchemes.html#refname.html'>parent</a>]</p></div>
+   <!-- l. 1 --><div class='crosslinks'><p class='noindent'>[<a href='PythonDemoFHELibrary.html'>prev</a>][<a href='FullyHomomorphicEncryptionSchemes.html#refname.html'>parent</a>]</p></div>
    <h3 class='likesectionHead' id='references'><a id='x165-248000'></a>References</h3>
 <!-- l. 1 --><p class='noindent'>
     </p><section class='thebibliography' role='doc-bibliography'><dl><dt>
@@ -106,7 +106,7 @@
     2018,  Revised  Selected  Papers</span>,  page  347–368,  Berlin,  Heidelberg,  2018.  Springer-Verlag.
     <a class='url' href='https://eprint.iacr.org/2018/931.pdf'><span class='rm-lmtt-10x-x-109'>https://eprint</span><span class='lmmi-10x-x-109'>.</span><span class='rm-lmtt-10x-x-109'>iacr</span><span class='lmmi-10x-x-109'>.</span><span class='rm-lmtt-10x-x-109'>org/2018/931</span><span class='lmmi-10x-x-109'>.</span><span class='rm-lmtt-10x-x-109'>pdf</span></a>.
     </dd></dl></section>
-   <!-- l. 664 --><div class='crosslinks'><p class='noindent'>[<a href='PythonbasedDemoFHELibrary.html'>prev</a>][<a href='FullyHomomorphicEncryptionSchemes.html#refname.html'>parent</a>]</p></div>
+   <!-- l. 664 --><div class='crosslinks'><p class='noindent'>[<a href='PythonDemoFHELibrary.html'>prev</a>][<a href='FullyHomomorphicEncryptionSchemes.html#refname.html'>parent</a>]</p></div>
     
 </body> 
 </html>
