--- a/CiphertexttoCiphertextAddition.html
+++ b/CiphertexttoCiphertextAddition.html
@@ -29,7 +29,7 @@ to the alternative GLWE version’s (<a href='AnAlternativeVersionofGLWE.html#an
 </div>
    
    <h5 class='subsubsectionHead' id='noise-bound-analysis'><span class='titlemark'>D-2.4.1   </span> <a id='x118-149000D-2.4.1'></a>Noise Bound Analysis</h5>
-<!-- l. 365 --><p class='noindent'>In the last part of Summary D-2.3 (in <a href='EncryptionandDecryption1.html#encryption-and-decryption1'><span class='ts1-lmr10-x-x-109'>§</span>D-2.3<!-- tex4ht:ref: subsec:bfv-enc-dec  --></a>), we explained the noise bound conditions for BFV’s correct
+<!-- l. 365 --><p class='noindent'>In the last part of Summary D-2.3 (in <a href='EncryptionandDecryption1.html#encryption-and-decryption1'><span class='ts1-lmr10-x-x-109'>§</span>D-2.3<!-- tex4ht:ref: subsec:bfv-enc-dec  --></a>), we learned the noise bound conditions for BFV’s correct
 decryption. In this subsection, we will explain how this condition holds in more detail by walking
 bacthrough BFV’s ciphertext-to-ciphertext addition.
 </p><!-- l. 367 --><p class='indent'>   Let’s denote the homomorphically added ciphertext as follows:
