--- a/CKKSScheme.html
+++ b/CKKSScheme.html
@@ -9,7 +9,7 @@
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
    <!-- l. 624 --><div class='crosslinks'><p class='noindent'>[<a href='BFVScheme.html'>prev</a>][<a href='FullyHomomorphicEncryptionSchemes.html#CKKSScheme.html'>parent</a>][<a href='BGVScheme.html'>next</a>]</p></div>
-   <h3 class='sectionHead' id='ckks-scheme'><span class='titlemark'>D-3   </span> <a id='x126-173000D-3'></a>CKKS Scheme</h3>
+   <h3 class='sectionHead' id='ckks-scheme'><span class='titlemark'>D-3   </span> <a id='x126-174000D-3'></a>CKKS Scheme</h3>
 <!-- l. 1 --><p class='noindent'>The CKKS scheme is designed for homomorphic addition and multiplication of complex numbers that
 contain imaginary components. Therefore, unlike BFV, BGV, or TFHE, which can only compute
 over integers, CKKS can compute real-world floating point arithmetic, such as in machine
@@ -57,7 +57,7 @@ and bootstrapping. This difference comes from the fact that CKKS handles homomor
 operations over complex numbers as inputs, whereas BFV handles homomorphic operations over
 rings.
 </p>
-   <div class='tcolorbox tcolorbox' id='tcolobox-92'>     
+   <div class='tcolorbox tcolorbox' id='tcolobox-93'>     
 <div class='tcolorbox-title'>
                                                                                          
                                                                                          
@@ -125,13 +125,13 @@ rings.
 <br />   <span class='subsectionToc'>D-3.2 <a href='EncryptionandDecryption2.html#encryption-and-decryption2'>Encryption and Decryption</a></span>
 <br />   <span class='subsectionToc'>D-3.3 <a href='CiphertexttoCiphertextAddition1.html#ciphertexttociphertext-addition1'>Ciphertext-to-Ciphertext Addition</a></span>
 <br />   <span class='subsectionToc'>D-3.4 <a href='CiphertexttoPlaintextAddition1.html#ciphertexttoplaintext-addition1'>Ciphertext-to-Plaintext Addition</a></span>
-<br />   <span class='subsectionToc'>D-3.5 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#homomorphic-ciphertexttociphertext-multiplication1'>Homomorphic Ciphertext-to-Ciphertext Multiplication</a></span>
-<br />   <span class='subsubsectionToc'>D-3.5.1 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#synthetic-ciphertext-derivation'>Synthetic Ciphertext Derivation</a></span>
-<br />   <span class='subsubsectionToc'>D-3.5.2 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#relinearization-method-ciphertext-decomposition'>Relinearization Method 1 – Ciphertext Decomposition</a></span>
-<br />   <span class='subsubsectionToc'>D-3.5.3 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#relinearization-method-ciphertext-modulus-switch'>Relinearization Method 2 – Ciphertext Modulus Switch</a></span>
-<br />   <span class='subsubsectionToc'>D-3.5.4 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#rescaling1'>Rescaling</a></span>
-<br />   <span class='subsubsectionToc'>D-3.5.5 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#comparing-bfv-and-ckks-bootstrapping'>Comparing BFV and CKKS Bootstrapping</a></span>
-<br />   <span class='subsubsectionToc'>D-3.5.6 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#summary4'>Summary</a></span>
+<br />   <span class='subsectionToc'>D-3.5 <a href='CiphertexttoCiphertextMultiplication1.html#ciphertexttociphertext-multiplication1'>Ciphertext-to-Ciphertext Multiplication</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.1 <a href='CiphertexttoCiphertextMultiplication1.html#synthetic-ciphertext-derivation'>Synthetic Ciphertext Derivation</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.2 <a href='CiphertexttoCiphertextMultiplication1.html#relinearization-method-ciphertext-decomposition'>Relinearization Method 1 – Ciphertext Decomposition</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.3 <a href='CiphertexttoCiphertextMultiplication1.html#relinearization-method-ciphertext-modulus-switch'>Relinearization Method 2 – Ciphertext Modulus Switch</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.4 <a href='CiphertexttoCiphertextMultiplication1.html#rescaling1'>Rescaling</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.5 <a href='CiphertexttoCiphertextMultiplication1.html#comparing-bfv-and-ckks-bootstrapping'>Comparing BFV and CKKS Bootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.6 <a href='CiphertexttoCiphertextMultiplication1.html#summary4'>Summary</a></span>
 <br />   <span class='subsectionToc'>D-3.6 <a href='CiphertexttoPlaintextMultiplication1.html#ciphertexttoplaintext-multiplication1'>Ciphertext-to-Plaintext Multiplication</a></span>
 <br />   <span class='subsectionToc'>D-3.7 <a href='textsfModDrop.html#moddrop'><span class='rm-lmss-10x-x-109'>ModDrop</span></a></span>
 <br />   <span class='subsubsectionToc'>D-3.7.1 <a href='textsfModDrop.html#difference-between-modulus-switch-and-moddrop'>Difference between Modulus Switch and <span class='rm-lmss-10x-x-109'>ModDrop</span></a></span>
