--- a/EncodingandDecoding.html
+++ b/EncodingandDecoding.html
@@ -9,7 +9,7 @@
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
    <!-- l. 77 --><div class='crosslinks'><p class='noindent'>[<a href='CKKSScheme.html#EncodingandDecoding.html'>parent</a>][<a href='EncryptionandDecryption2.html'>next</a>]</p></div>
-   <h4 class='subsectionHead' id='encoding-and-decoding'><span class='titlemark'>D-3.1   </span> <a id='x127-174000D-3.1'></a>Encoding and Decoding</h4>
+   <h4 class='subsectionHead' id='encoding-and-decoding'><span class='titlemark'>D-3.1   </span> <a id='x127-175000D-3.1'></a>Encoding and Decoding</h4>
 <!-- l. 81 --><p class='noindent'>CKKS’s encoding and decoding is fundamentally very similar to BFV’s batch encoding scheme.
 BFV designs its batch encoding scheme (Summary D-2.3 in <a href='EncryptionandDecryption1.html#encryption-and-decryption1'><span class='ts1-lmr10-x-x-109'>§</span>D-2.3<!-- tex4ht:ref: subsec:bfv-enc-dec  --></a>) based on the updated
 <!-- l. 81 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>W</mi></mrow><mo accent='true' stretchy='false'>~</mo></mover></math> and
@@ -186,7 +186,7 @@ within their own group in a wrapping manner.
 </p><!-- l. 157 --><p class='indent'>   We summarize CKKS’s encoding and decoding procedure as follows, which is similar to BFV’s
 encoding and decoding procedure (described in Summary D-2.2.5 in <a href='BatchEncoding.html#summary'><span class='ts1-lmr10-x-x-109'>§</span>D-2.2.5<!-- tex4ht:ref: subsubsec:bfv-encoding-summary  --></a>):
 </p>
-   <div class='tcolorbox tcolorbox' id='tcolobox-93'>     
+   <div class='tcolorbox tcolorbox' id='tcolobox-94'>     
 <div class='tcolorbox-title'>
 <!-- l. 245 --><p class='indent'>   <!-- l. 245 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Summary D-3.1</span><!-- l. 245 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
                                                                                          
@@ -348,7 +348,7 @@ of the lowest multiplicative level. Due to this limitation, CKKS is considered a
 homomorphic encryption.
    
 </p>
-   <h5 class='subsubsectionHead' id='example6'><span class='titlemark'>D-3.1.1   </span> <a id='x127-175000D-3.1.1'></a>Example</h5>
+   <h5 class='subsubsectionHead' id='example6'><span class='titlemark'>D-3.1.1   </span> <a id='x127-176000D-3.1.1'></a>Example</h5>
 <!-- l. 273 --><p class='noindent'>Suppose our input complex vector’s dimension <!-- l. 273 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow><mi>n</mi>
 </mrow><mrow><mn>2</mn></mrow></mfrac></mstyle> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>2</mn></mrow></math>,
 the bounding polynomial degree <!-- l. 273 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>
@@ -512,8 +512,9 @@ we compute:
 in the Hermitian vector <!-- l. 445 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><msup><mrow></mrow><mrow><mi>′</mi></mrow></msup></mrow></msub></math>
 to recover the input vector:
 </p><!-- l. 447 --><p class='indent'>   <!-- l. 447 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mn>1.0997</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>4.3007</mn><mi>i</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle class='text'><mtext> </mtext></mstyle><mn>3.5000</mn> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1.4003</mn><mi>i</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
-</p><!-- l. 449 --><p class='indent'>   <!-- l. 449 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>≈</mo><mo class='MathClass-open' stretchy='false'>(</mo><mn>1.1</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>4.3</mn><mi>i</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle class='text'><mtext> </mtext></mstyle><mn>3.5</mn> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1.4</mn><mi>i</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow></math> <span style='color:#FF0000;'>  #
-The original input vector</span>
+</p><!-- l. 449 --><p class='indent'>   <!-- l. 449 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>≈</mo><mo class='MathClass-open' stretchy='false'>(</mo><mn>1.1</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>4.3</mn><mi>i</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle class='text'><mtext> </mtext></mstyle><mn>3.5</mn> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1.4</mn><mi>i</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow></math> <span style='color:#FF0000;'>
+<!-- l. 449 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-rel' stretchy='false'>▹</mo></math> The
+original input vector</span>
 </p><!-- l. 451 --><p class='indent'>   <!-- l. 451 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 453 --><p class='indent'>   Because of the rounding drifts for converting square roots into integers, the decoded value is slightly
 different from the original input complex values. This is why CKKS is called an approximate
