--- a/EncodingandDecoding1.html
+++ b/EncodingandDecoding1.html
@@ -9,11 +9,11 @@
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
    <!-- l. 47 --><div class='crosslinks'><p class='noindent'>[<a href='BGVScheme.html#EncodingandDecoding1.html'>parent</a>][<a href='EncryptionandDecryption3.html'>next</a>]</p></div>
-   <h4 class='subsectionHead' id='encoding-and-decoding1'><span class='titlemark'>D-4.1   </span> <a id='x141-206000D-4.1'></a>Encoding and Decoding</h4>
+   <h4 class='subsectionHead' id='encoding-and-decoding1'><span class='titlemark'>D-4.1   </span> <a id='x141-207000D-4.1'></a>Encoding and Decoding</h4>
 <!-- l. 50 --><p class='noindent'>BGV uses almost the same plaintext encoding scheme as BFV as described in
 Summary <a href='BatchEncoding.html#summary'>D-2.2.5<!-- tex4ht:ref: subsubsec:bfv-encoding-summary  --></a> in <a href='BatchEncoding.html#summary'><span class='ts1-lmr10-x-x-109'>§</span>D-2.2.5<!-- tex4ht:ref: subsubsec:bfv-encoding-summary  --></a>, with the only difference that the scaling factor
-<!-- l. 50 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle displaystyle='true'><mfrac><mrow><msub><mrow><mi>q</mi></mrow><mrow><mn>0</mn></mrow></msub>
- </mrow><mrow><mi>t</mi> </mrow></mfrac></mstyle></mrow></math> is not applied to the
+<!-- l. 50 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mrow><mo fence='true' form='prefix'>⌊</mo><mrow><mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
+</mrow><mrow><mi>t</mi></mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow></mrow></math> is not applied to the
 plaintext polynomial <!-- l. 50 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>M</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
 like BFV does. Instead, BGV applies its own scaling factor
 <!-- l. 50 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>t</mi></mrow></math> to the noise
@@ -21,7 +21,7 @@ polynomial <!-- l. 50 --><math display='inline' xmlns='http://www.w3.org/1998/Ma
 whenever it encrypts a new ciphertext (will be explained in <a href='EncryptionandDecryption3.html#encryption-and-decryption3'><span class='ts1-lmr10-x-x-109'>§</span>D-4.2<!-- tex4ht:ref: subsubsec:bfv-encoding-summary  --></a>).
 </p><!-- l. 52 --><p class='indent'>   The following is BGV’s encoding and decoding scheme.
 </p>
-   <div class='tcolorbox tcolorbox' id='tcolobox-106'>     
+   <div class='tcolorbox tcolorbox' id='tcolobox-107'>     
 <div class='tcolorbox-title'>
 <!-- l. 101 --><p class='indent'>   <!-- l. 101 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Summary D-4.1</span><!-- l. 101 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
                                                                                          
