--- a/HomomorphicRotationofInputVectorSlots1.html
+++ b/HomomorphicRotationofInputVectorSlots1.html
@@ -9,7 +9,7 @@
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
    <!-- l. 1122 --><div class='crosslinks'><p class='noindent'>[<a href='HomomorphicKeySwitching2.html'>prev</a>][<a href='CKKSScheme.html#HomomorphicRotationofInputVectorSlots1.html'>parent</a>][<a href='ContemplationonCKKSEncoding.html'>next</a>]</p></div>
-   <h4 class='subsectionHead' id='homomorphic-rotation-of-input-vector-slots1'><span class='titlemark'>D-3.9   </span> <a id='x135-190000D-3.9'></a>Homomorphic Rotation of Input Vector Slots</h4>
+   <h4 class='subsectionHead' id='homomorphic-rotation-of-input-vector-slots1'><span class='titlemark'>D-3.9   </span> <a id='x135-191000D-3.9'></a>Homomorphic Rotation of Input Vector Slots</h4>
 <!-- l. 1125 --><p class='noindent'>CKKS’s batch encoding scheme (Summary D-3.1 in <a href='EncodingandDecoding.html#encoding-and-decoding'><span class='ts1-lmr10-x-x-109'>§</span>D-3.1<!-- tex4ht:ref: subsec:ckks-encoding-decoding  --></a>) implicitly supports homomorphic
 rotation of input slot vectors like that of BFV’s homomorphic rotation (Summary D-2.9.3
 in <a href='HomomorphicRotationofInputVectorSlots.html#summary2'><span class='ts1-lmr10-x-x-109'>§</span>D-2.9.3<!-- tex4ht:ref: subsubsec:bfv-rotation-summary  --></a>). This is because CKKS uses the same encoding and decoding matrices
@@ -69,7 +69,7 @@ positions to the right (in a wrapping manner among them).
 </p><!-- l. 1137 --><p class='indent'>   BFV uses CKKS’s same rotation scheme described in Summary D-2.9.3 (in <a href='HomomorphicRotationofInputVectorSlots.html#summary2'><span class='ts1-lmr10-x-x-109'>§</span>D-2.9.3<!-- tex4ht:ref: subsubsec:bfv-rotation-summary  --></a>) as
 follows:
 </p>
-   <div class='tcolorbox tcolorbox' id='tcolobox-101'>     
+   <div class='tcolorbox tcolorbox' id='tcolobox-102'>     
 <div class='tcolorbox-title'>
 <!-- l. 1164 --><p class='indent'>   <!-- l. 1164 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Summary D-3.9</span><!-- l. 1164 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
 <span class='rm-lmbx-10x-x-109'>CKKS’s Homomorphic Rotation of Input Vector
@@ -148,7 +148,7 @@ Therefore, the user can use BFV’s first-half slots and second-half slots toget
 computations.
    
 </p>
-   <h5 class='subsubsectionHead' id='example7'><span class='titlemark'>D-3.9.1   </span> <a id='x135-191000D-3.9.1'></a>Example</h5>
+   <h5 class='subsubsectionHead' id='example7'><span class='titlemark'>D-3.9.1   </span> <a id='x135-192000D-3.9.1'></a>Example</h5>
 <!-- l. 1174 --><p class='noindent'>In this subsection, we will show the following 2 examples:
    </p><dl class='enumerate-enumitem'><dt class='enumerate-enumitem'>
 1. </dt><dd class='enumerate-enumitem'>Encode an input vector <!-- l. 1176 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
@@ -221,7 +221,8 @@ follows:
 elements in the above Hermitian vector to recover the input vector:
 </p><!-- l. 1239 --><p class='indent'>   <!-- l. 1239 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mn>3.500</mn> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1.4003</mn><mi>i</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle class='text'><mtext> </mtext></mstyle><mn>1.0997</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>4.3007</mn><mi>i</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
 </p><!-- l. 1241 --><p class='indent'>   <!-- l. 1241 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>≈</mo><mo class='MathClass-open' stretchy='false'>(</mo><mn>3.5</mn> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1.4</mn><mi>i</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle class='text'><mtext> </mtext></mstyle><mn>1.1</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>4.3</mn><mi>i</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
-<!-- l. 1242 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>=</mo><msup><mrow> <mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>h</mi><mo class='MathClass-rel' stretchy='false'>=</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msup></mrow></math> <span style='color:#FF0000;'> # The original
+<!-- l. 1242 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>=</mo><msup><mrow> <mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>h</mi><mo class='MathClass-rel' stretchy='false'>=</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msup></mrow></math> <span style='color:#FF0000;'>
+<!-- l. 1242 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-rel' stretchy='false'>▹</mo></math> The original
 input vector <!-- l. 1242 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
 rotated by 1 position to the left</span>
 </p><!-- l. 1246 --><p class='indent'>   <!-- l. 1246 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
