deploy: 95d934618e4dd80844107298ffa611f43f866c1e

--- a/GLWECiphertexttoPlaintextMultiplication.html
+++ b/GLWECiphertexttoPlaintextMultiplication.html
@@ -110,6 +110,7 @@ subsection.
 </p>
    <div class='subsectionTOCS hrr'>
 <br />   <span class='subsectionToc'>C-3.1 <a href='GadgetDecompositionforNoiseSuppression.html#gadget-decomposition-for-noise-suppression'>Gadget Decomposition for Noise Suppression</a></span>
+<br />   <span class='subsubsectionToc'>C-3.1.1 <a href='GadgetDecompositionforNoiseSuppression.html#discussion4'>Discussion</a></span>
    </div>
 <!-- l. 76 --><p class='indent'>   
                                                                                          
